syntax = "proto3";

option go_package = "grpc/proto";

message NewUser {
    string fullName = 1;
    string email = 2;
    string password = 3;
    string country = 4;
}

message User {
    string id = 1;
    string fullName = 2;
    string email = 3;
    string country = 4;
}

message GetUsersFilter {
    string afterId = 1;
    int32 limit = 2;
}

message GetUsersResponse {
    repeated User users = 1;
}

message LoginInput {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
    string jwtToken = 2;
}

message GetUserFromJWTInput {
    string jwtToken = 1;
}

message GetUserFromJWTResponse {
    User user = 1;
}

service UserService {
    rpc CreateUser (NewUser) returns (User);
    rpc GetUsers (GetUsersFilter) returns (GetUsersResponse);
    rpc LoginUser (LoginInput) returns (LoginResponse);
    rpc GetUserFromJWT(GetUserFromJWTInput) returns (GetUserFromJWTResponse);
}